# 1D-quantum-path-integral-sim

./: .gitignore  CMakeLists.txt  README.md
docs/Info/: physics_info.md
nb/: Llama3.2_(1B_and_3B)-Conversationalp2.ipynb
src/: main.cpp  main_web.cpp
web/: compile_web.sh  index.html  simulation.js
